--- a/src/css/Banner.module.css
+++ b/src/css/Banner.module.css
@@ -1,8 +1,13 @@
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .bannerContainer {
   position: relative;
   width: 100%;
-  height: 350px;
-  /* overflow: hidden; */
+  height: 320px;
+  overflow: hidden;
 }
 
 .bannerImg {
@@ -11,6 +16,7 @@
   object-fit: cover;
   opacity: 0.9;
   border-radius: 30px;
+  object-position: top;
 }
 
 .bannerButton {
