--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -10,3 +10,10 @@ img {
   padding: 20px;
   overflow-x: auto;
 }
+/* loading */
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
