--- a/src/css/Detail.module.css
+++ b/src/css/Detail.module.css
@@ -24,6 +24,9 @@
 .detailContainer {
   position: relative;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 85vh;
+  /* overflow: hidden; */
 }
 .detailContent {
   position: absolute;
@@ -33,7 +36,6 @@
   justify-content: space-between;
   padding: 30px;
 }
-
 .contentPoster {
   width: 200px;
   border-radius: 10px;
@@ -76,14 +78,19 @@
 }
 .buttonContainer button:first-child {
   font-weight: 600;
-  width: 220px;
+  width: 170px;
+  border-radius: 50px;
+  height: 40px;
+  font-size: 16px;
 }
 .buttonContainer button:last-child,
 .buttonContainer button:nth-child(2) {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background-color: #191b1f;
+  color: white;
+  /* border: 1.5px solid #eee; */
 }
 .buttonContainer button i {
   margin: 0;
@@ -99,4 +106,103 @@
 .buttonContainer button:last-child:hover,
 .buttonContainer button:nth-child(2):hover {
   color: #d12f26;
+}
+
+/* ========================= time and genres */
+.timeAndGenres {
+  font-weight: 600;
+}
+.row {
+  display: grid;
+  grid-template-columns: 170px 1fr;
+  /* column-gap: 0px; */
+  /* align-items: start; */
+}
+
+.detailContent p {
+  margin-top: 30px;
+}
+
+/* ====================== cast */
+.castContainer {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+.castContainer h1 {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.castContainer img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+.castItem {
+  margin: 10px 0;
+  display: flex;
+  font-size: 12px;
+}
+
+/* ========================similar contents */
+.similarContainer {
+  position: absolute;
+  bottom: 0%;
+  z-index: 3;
+  width: 100%;
+}
+.similarContainer h2 {
+  font-size: 20px;
+  padding: 0;
+  margin-left: 10px;
+}
+.similarList {
+  display: flex;
+  overflow: hidden;
+  scroll-behavior: smooth;
+  /* padding: 20px; */
+  border-radius: 10px;
+  margin: 0 14px;
+}
+.similarList img {
+  width: 200px;
+  border-radius: 10px;
+}
+.similarItem {
+  margin-right: 16px;
+}
+.similarSlide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.similarSlide button {
+  /* padding: 0; */
+  margin: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s;
+  background-color: #191b1f;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+  color: #eee;
+}
+.similarSlide button:first-child {
+  position: absolute;
+  left: 0;
+}
+.similarSlide button:last-child {
+  position: absolute;
+  right: 0;
+}
+.similarSlide:hover button {
+  transition: opacity 0.3s ease-in-out;
+  opacity: 1;
+  cursor: pointer;
+  pointer-events: auto;
 }
