--- a/src/css/Detail.module.css
+++ b/src/css/Detail.module.css
@@ -127,12 +127,18 @@
 .castContainer {
   display: flex;
   flex-direction: column;
-  width: 40%;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+  overflow: hidden;
+  flex-shrink: 0;
 }
 .castContainer h1 {
-  width: 100%;
+  /* width: 100%; */
   padding: 0;
   margin: 0;
+  font-size: 20px;
+  text-shadow: 0 0 10 rgba(0, 0, 0, 0.5);
 }
 .castContainer img {
   width: 50px;
@@ -142,9 +148,12 @@
   object-position: center;
 }
 .castItem {
-  margin: 10px 0;
+  margin: 14px 0;
   display: flex;
   font-size: 12px;
+}
+.castName {
+  margin-left: 10px;
 }
 
 /* ========================similar contents */
