--- a/src/css/Outlet.module.css
+++ b/src/css/Outlet.module.css
@@ -65,3 +65,7 @@ a {
   display: flex;
   flex-direction: column;
 }
+.tvsContainer img:hover {
+  opacity: 0.6;
+  transition: opacity 0.2s ease-in-out;
+}
