--- a/src/css/RightSide.module.css
+++ b/src/css/RightSide.module.css
@@ -75,3 +75,8 @@ button {
   cursor: pointer;
   margin-bottom: 20px;
 }
+
+.seeMoreButton:hover {
+  opacity: 0.8;
+  transition: opacity 0.2s ease-in-out;
+}
