--- a/src/css/Detail.module.css
+++ b/src/css/Detail.module.css
@@ -47,9 +47,14 @@
 .middleContent h1 {
   margin: 0;
   padding: 0;
-  font-size: 38px;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-bottom: 10px;
+}
+.smallText {
+  font-size: 30px;
+}
+.normalText {
+  font-size: 36px;
 }
 .yearContainer {
   display: flex;
@@ -120,7 +125,7 @@
 }
 
 .detailContent p {
-  margin-top: 30px;
+  margin-top: 14px;
 }
 
 /* ====================== cast */
@@ -236,4 +241,15 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
   padding: 0;
   margin: 0;
+}
+.noTrailer {
+  background-color: #191b1f;
+  width: 660px;
+  height: 340px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #eee;
+  border-radius: 20px;
+  font-size: 18px;
 }
